# RCAS

./: .gitignore  .travis.yml  DESCRIPTION  LICENSE  MANIFEST.in  Makefile.am  NAMESPACE  RCAS_tutorial.html  RCAS_tutorial.ipynb  README.md  configure.ac  guix.scm  package.scm  rcas-web.scm  requirements.txt  setup.py
R/: data.R  databaseSetUpFunctions.R  enrichment_analysis.R  meta_analysis_functions.R  motif_analysis.R  plotting_functions.R  report_functions.R
RCAS/: DESCRIPTION  NAMESPACE  RCAS.py
RCAS/R/: data.R  enrichment_analysis.R  motif_analysis.R  report_functions.R
RCAS/data/: msigDB.rda
RCAS/data/html/: custom.css  header.html  rcas.Rmd
RCAS/data/snakefiles/: RCAS.GOrich  RCAS.PATHrich  RCAS.anot  RCAS.motif  RCAS.snakefile
RCAS/inst/: NEWS  report.Rmd
RCAS/libexec/: generate_report.sh
RCAS/man/: calculateCoverageProfile.Rd  calculateCoverageProfileFromTxdb.Rd  calculateCoverageProfileList.Rd  calculateCoverageProfileListFromTxdb.Rd  createOrthologousMsigdbDataset.Rd  extractSequences.Rd  getMotifSummaryTable.Rd  getTargetedGenesTable.Rd  getTxdbFeatures.Rd  getTxdbFeaturesFromGff.Rd  gff.Rd  importBed.Rd  importGtf.Rd  msigDB.Rd  parseMsigdb.Rd  printMsigdbDataset.Rd  queryGff.Rd  queryRegions.Rd  retrieveOrthologs.Rd  runMSIGDB.Rd  runMotifRG.Rd  runReport.Rd  runTopGO.Rd
RCAS/tests/testthat/: test_GO.R  test_motif.R  test_msigdb.R  test_report.R
RCAS/vignettes/: RCAS.vignette.R  RCAS.vignette.Rmd
base/: header.html
conda/genomation/: meta.yaml
conda/iranges/: meta.yaml
conda/meme-suite/: build.sh  meta.yaml
conda/org.ce.eg.db/: meta.yaml
conda/pandoc/: build.sh  meta.yaml
conda/perl-xml-simple/: build.sh  meta.yaml
conda/rcas/: build.sh  meta.yaml
conda/s4vectors_0811/: meta.yaml
conda/seqpattern/: meta.yaml
data/: datalist  geneSets.rda  gff.rda  queryRegions.rda
galaxy/rcas/: rcas.xml
inst/: CITATION  NEWS  NEWS.md  report.Rmd
inst/extdata/: FMR1_Ascano2012a_hg19.bed  FUS_Nakaya2013c_hg19.bed  hg19.RCASDB.sqlite  hg19.sample.gtf.granges.rds
inst/reporting_scripts/: footer.html  header.html  report.Rmd  reportMetaAnalysis.Rmd
man/: calculateCoverageProfile.Rd  calculateCoverageProfileFromTxdb.Rd  calculateCoverageProfileList.Rd  calculateCoverageProfileListFromTxdb.Rd  checkSeqDb.Rd  createControlRegions.Rd  createDB.Rd  createOrthologousGeneSetList.Rd  deleteSampleDataFromDB.Rd  discoverFeatureSpecificMotifs.Rd  extractSequences.Rd  findDifferentialMotifs.Rd  findEnrichedFunctions.Rd  geneSets.Rd  generateKmers.Rd  getFeatureBoundaryCoverage.Rd  getFeatureBoundaryCoverageBin.Rd  getFeatureBoundaryCoverageMulti.Rd  getFeatureSpecificMotifLogos.Rd  getIntervalOverlapMatrix.Rd  getMotifSummaryTable.Rd  getOverlapSimilarityMatrix.Rd  getPWM.Rd  getTargetedGenesTable.Rd  getTxdbFeatures.Rd  getTxdbFeaturesFromGRanges.Rd  getTxdbFeaturesFromGff.Rd  gff.Rd  importBed.Rd  importBedFiles.Rd  importGtf.Rd  parseMsigdb.Rd  plotFeatureBoundaryCoverage.Rd  printMsigdbDataset.Rd  queryGff.Rd  queryRegions.Rd  retrieveOrthologs.Rd  runGSEA.Rd  runMSIGDB.Rd  runMotifDiscovery.Rd  (+7 more)
rcas-web/: config.scm  render.scm  server.scm  sxml.scm  util.scm
rpackage/RCAS/: DESCRIPTION  NAMESPACE
rpackage/RCAS/R/: data.R  enrichment_analysis.R  motif_analyis.R  motif_analysis.R  report_functions.R  test.R
rpackage/RCAS/inst/: report.Rmd
rpackage/RCAS/man/: calculateCoverageProfile.Rd  calculateCoverageProfileFromTxdb.Rd  calculateCoverageProfileList.Rd  calculateCoverageProfileListFromTxdb.Rd  createControlRegions.Rd  createOrthologousMsigdbDataset.Rd  extractSequences.Rd  getMotifSummaryTable.Rd  getTargetedGenesTable.Rd  getTxdbFeatures.Rd  getTxdbFeaturesFromGff.Rd  gff.Rd  importBed.Rd  importGtf.Rd  msigDB.Rd  parseMsigdb.Rd  queryGff.Rd  queryRegions.Rd  retrieveOrthologs.Rd  runMSIGDB.Rd  runMotifRG.Rd  runReport.Rd  runTopGO.Rd  summarizeQueryRegions.Rd
rpackage/RCAS/tests/: testthat.R
rpackage/RCAS/tests/testthat/: test_data.R  test_msigdb.R  test_txdbfeatures.R
rpackage/RCAS/vignettes/: RCAS.vignette.R  RCAS.vignette.Rmd  RCAS.vignette.html  bibliography.bib  generate_report.Rmd
src/: RCAS.GOrich  RCAS.GOrich.in  RCAS.PATHrich  RCAS.PATHrich.snakefile.in  RCAS.anot  RCAS.anot.snakefile.in  RCAS.in.in  RCAS.motif.snakefile.in  RCAS.py  RCAS.snakefile  RCAS.snakefile.in  README_tmp  custom.css  generate_report.sh  generate_report.sh.in  header.html  make.R  map_msigdb_orthologs.R  parse_anot.py  rcas.GO.R  rcas.GO.Rmd  rcas.Rmd  rcas.motif.R  rcas.msigdb.R  run.rcas.R  run.rcas.R.in.in  run.rcas.parallel.R  top_motifs.py
src/base/: c2.cp.v5.0.entrez.ce6.gmt  c2.cp.v5.0.entrez.dm3.gmt  c2.cp.v5.0.entrez.mm9.gmt  custom.css  header.html.in
test/: PARCLIP_AGO1234_Hafner2010a_hg19_xaa.bed  PARCLIP_AGO1234_Hafner2010a_hg19_xab.bed  PARCLIP_AGO1234_Hafner2010a_hg19_xac.bed  config.json  custom.css  header.html  img  lin28A.bed  make.R  rcas.Rmd  xaa.bed  xab.bed
tests/testthat/: test_GO.R  test_data.R  test_database_functions.R  test_motif.R  test_msigdb.R  test_report.R  test_txdbfeatures.R
vignettes/: RCAS.metaAnalysis.vignette.Rmd  RCAS.vignette.R  RCAS.vignette.Rmd  RCAS.vignette.html
